--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -55,7 +55,7 @@ LFLAGS90 =
 # List of all programs to be compiled
 ########################################################################
 ALLPROGS = ex1 ex2 ex3 ex4 ex5 ex5f ex6 ex7 ex8 ex9 ex10 ex11 ex12 ex12f \
-           ex13 ex14 ex15 ex16
+           ex13 ex14 ex15 ex16 ex3D
 BIGINTPROGS = ex5big ex15big
 FORTRANPROGS = ex5f ex12f
 MAXDIMPROGS = ex17 ex18
@@ -209,6 +209,12 @@ ex18: ex18.o
 # Example 18 (complex)
 ########################################################################
 ex18comp: ex18comp.o
+	$(CC) -o $@ $^ $(LFLAGS)
+
+########################################################################
+# Example 3D
+########################################################################
+ex3D: ex3D.o
 	$(CC) -o $@ $^ $(LFLAGS)
 
 ########################################################################
